Add copyright and bump version properly. (#2)
* Adding deployment information for Maven.

* Miscellaneous changes based on thoughts while writing the manual entries.

* Update for new Maven coordinates and new push plugin.

* Bump version and fix docs link.

* Adding copyright and auto-format.

* Bump version.